# BiliRoaming-Rust-Server

./: Cargo.toml  README.md  build.rs  config.example.json  config.example.yaml  config.example.yml  config.json  install.sh
.github/workflows/: PR.yml  alpha-releases.yml  ci.yml  main-check.yml  release.yml  rust.yml
src/: lib.rs  main.rs  mods.rs  websearch.json
src/docs/: dev.md  error_code_define.md  redis_data.md
src/html/: admin.html
src/mods/: api.rs  background_tasks.rs  cache.rs  config.rs  ep_info.rs  get_bili_res.rs  get_user_info.rs  handler.rs  health.rs  macros.rs  middleware.rs  pub_api.rs  push.rs  rate_limit.rs  request.rs  stats_info.rs  tools.rs  types.rs  upstream_grpc_res.rs  upstream_health.rs  upstream_res.rs  user_info.rs
src/mods/grpc_api/: bilibili.app.archive.middleware.v1.rs  bilibili.metadata.device.rs  bilibili.metadata.fawkes.rs  bilibili.metadata.locale.rs  bilibili.metadata.network.rs  bilibili.metadata.parabox.rs  bilibili.metadata.restriction.rs  bilibili.metadata.rs  bilibili.pagination.rs  bilibili.pgc.gateway.player.v2.rs  bilibili.polymer.app.search.v1.rs  mod.rs
src/mods/middleware/: compress.rs  mod.rs
src/mods/middleware/error/: mod.rs  server.rpc.rs  types.rs
src/mods/middleware/grpc_api/: README.md  bilibili.app.archive.middleware.v1.rs  bilibili.app.playurl.v1.rs  bilibili.metadata.device.rs  bilibili.metadata.fawkes.rs  bilibili.metadata.locale.rs  bilibili.metadata.network.rs  bilibili.metadata.parabox.rs  bilibili.metadata.restriction.rs  bilibili.metadata.rs  bilibili.pagination.rs  bilibili.pgc.gateway.player.v1.rs  bilibili.pgc.gateway.player.v2.rs  bilibili.polymer.app.search.v1.rs  bilibili.rpc.rs  mod.rs  server.api.public.bangumi.rs  server.auth.v1.rs
src/proto/: readme.md
src/proto/bilibili/account/fission/v1/: fission.proto
src/proto/bilibili/ad/v1/: ad.proto
src/proto/bilibili/api/player/v1/: player.proto
src/proto/bilibili/api/probe/v1/: probe.proto
src/proto/bilibili/app/archive/v1/: archive.proto
src/proto/bilibili/app/card/v1/: ad.proto  card.proto  common.proto  double.proto  single.proto
src/proto/bilibili/app/dynamic/v1/: dynamic.proto
src/proto/bilibili/app/dynamic/v2/: dynamic.proto
src/proto/bilibili/app/interfaces/v1/: history.proto  media.proto  search.proto  space.proto
src/proto/bilibili/app/listener/v1/: listener.proto
src/proto/bilibili/app/nativeact/v1/: nativeact.proto
src/proto/bilibili/app/playeronline/v1/: playeronline.proto
src/proto/bilibili/app/playurl/v1/: playurl.proto
src/proto/bilibili/app/resource/v1/: module.proto
src/proto/bilibili/app/space/v1/: space.proto
src/proto/bilibili/app/splash/v1/: splash.proto
src/proto/bilibili/app/topic/v1/: topic.proto
src/proto/bilibili/app/view/v1/: view.proto
src/proto/bilibili/app/wall/v1/: wall.proto
src/proto/bilibili/broadcast/message/editor/: notify.proto
src/proto/bilibili/broadcast/message/esports/: notify.proto
src/proto/bilibili/broadcast/message/fission/: notify.proto
src/proto/bilibili/broadcast/message/im/: notify.proto
src/proto/bilibili/broadcast/v1/: broadcast.proto  laser.proto  mod.proto  push.proto  room.proto  test.proto
src/proto/bilibili/broadcast/v2/: laser.proto
src/proto/bilibili/dynamic/common/: dynamic.proto
src/proto/bilibili/dynamic/gw/: gateway.proto
src/proto/bilibili/gaia/gw/: gw_api.proto
src/proto/bilibili/im/type/: im.proto
src/proto/bilibili/metadata/: metadata.proto
src/proto/bilibili/metadata/device/: device.proto
src/proto/bilibili/metadata/fawkes/: fawkes.proto
src/proto/bilibili/metadata/locale/: locale.proto
src/proto/bilibili/metadata/network/: network.proto
src/proto/bilibili/metadata/parabox/: pararbox.proto
src/proto/bilibili/metadata/restriction/: restriction.proto
src/proto/bilibili/pagination/: pagination.proto
src/proto/bilibili/playershared/: playershared.proto
src/proto/bilibili/polymer/contract/: contract.proto
src/proto/bilibili/polymer/demo/: demo.proto
src/proto/bilibili/polymer/list/: list.proto
src/proto/bilibili/rpc/: status.proto
src/proto/pgc/biz/: room.proto
src/proto/server/api/public/: bangumi.proto
src/proto/server/auth/v1/: auth.proto
src/proto/server/rpc/: error.proto
(+34 files in other folders)
