[package]
name = "biliroaming_rust_server"
version = "0.3.3"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-governor = "0.4.0-beta.3"
actix-web = {version = "4.2.1", features = ["rustls","compress-brotli","compress-gzip","compress-zstd"]}
ahash = "0.8.2"
async-channel = "1.7.1"
async-trait = "0.1.65"
base64 = "0.21.0"
bytes = "1.3.0"
chrono = "0.4.23"
ctrlc = "3.2.3"
dashmap = "5.4.0"
deadpool = "0.9.5"
deadpool-redis = {version = "0.11.1", features = ["rt_tokio_1"] }
delay_timer = "0.11.3"
env_logger = "0.10.0"
fake = { version = "2.5", features=['chrono']}
fluent-uri = "0.1.3"
futures = "0.3.25"
lazy_static = "1.4.0"
log = "0.4"
num_cpus = "1.15.0"
pcre2 = "0.2.3"
qstring = "0.7.2"
rand = "0.8.5"
redis = { version = "0.22.3", features = ["json", "ahash", "bytes"] }
reqwest = {version = "0.11.13", features = ["socks","brotli","gzip","deflate", "rustls-tls"]}
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
rust-crypto = "0.2.36"
serde_json = "1.0.89"
serde_yaml = "0.9.14"
serde = {version = "1.0.147", features = ["derive"]}
tokio = { version = "1.22.0", features = ["full"] }
urlencoding = "2.1.2"
# gRPC相关依赖
http-body = "0.4.5"
hyper = { version = "0.14.23", features = ["full"] }
hyper-socks2 = { git = "https://github.com/cxw620/hyper-socks2.git", branch = "master" }
hyper-tls = "0.5.0"
native-tls = { version = "0.2.11", features = ["alpn"] }
prost = "0.11.3"
prost-types = "0.11.2"
tokio-native-tls = "0.3.0"
tonic = {version = "0.8.3", features = ["gzip"]}
tonic-reflection = "0.6.0"
tower = "0.4.13"
tower-service = "0.3.2"

[build-dependencies]
tonic-build = "0.8.4"

[profile.fast]
inherits = "release"
opt-level = 3 
debug = false 
split-debuginfo = 'off' 
debug-assertions = false 
overflow-checks = false 
lto = true 
panic = 'unwind' 
incremental = false 
codegen-units = 1 
rpath = false
