[package]
name = "biliroaming_rust_server"
version = "0.3.3"
edition = "2021"

[dependencies]
chrono = "0.4.23"
actix-web = {version = "4.2.1", features = ["rustls","compress-brotli","compress-gzip","compress-zstd"]}
actix-files = "0.6.2"
qstring = "0.7.2"
rust-crypto = "0.2.36"
serde_json = "1.0.89"
serde_yaml = "0.9.14"
serde = {version = "1.0.147",features = ["derive"]}
deadpool = "0.9.5"
deadpool-redis = "0.11.0"
async-channel = "1.7.1"
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
pcre2 = "0.2.3"
ctrlc = "3.2.3"
rand = "0.8.5"
actix-governor = "0.4.0-beta.3"
base64 = "0.21.0"
urlencoding = "2.1.2"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.10.0"
reqwest = {version = "0.11.14",features = ["socks","brotli","gzip","deflate","rustls-tls"]}
rustls = "0.21.2"
rustls-pemfile = "1.0.2"

[profile.fast]
inherits = "release"
opt-level = 3 
debug = false 
split-debuginfo = 'off' 
debug-assertions = false 
overflow-checks = false 
lto = true 
panic = 'unwind' 
incremental = false 
codegen-units = 1 
rpath = false
