[package]
name = "biliroaming_rust_server"
version = "0.3.3"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-governor = "0.4.1"
actix-web = { version = "4.3.1", features = ["rustls","compress-brotli","compress-gzip","compress-zstd"] }
async-channel = "1.8.0"
base64 = "0.21.2"
chrono = "0.4.26"
ctrlc = "3.4.0"
deadpool = "0.9.5"
deadpool-redis = "0.12.0"
env_logger = "0.10.0"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4"
pcre2 = "0.2.4"
qstring = "0.7.2"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["socks","brotli","gzip","deflate","rustls-tls"] }
rust-crypto = "0.2.36"
rustls = "0.20.8"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_yaml = "0.9.22"
tokio = { version = "1.29.1", features = ["full"] }
urlencoding = "2.1.2"

[profile.fast]
inherits = "release"
opt-level = 3 
debug = false 
split-debuginfo = 'off' 
debug-assertions = false 
overflow-checks = false 
lto = true 
panic = 'unwind' 
incremental = false 
codegen-units = 1 
rpath = false
